--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-cloud-config-server
-server.port=8888
-spring.cloud.config.server.git.uri=D:\\git-localconfig-repo
+server.port=8800
+spring.cloud.config.server.git.uri=https://github.com/surekrishna/git-cloudconfig-repo.git
